Refactored GroupExpenses to have 2 ChildComponents, made sure Spinner is rendered in the right place and fixed x overflow for expenses with longer descriptions

--- a/client/src/components/containerComponents/GroupHistory/GroupHistory.module.css
+++ b/client/src/components/containerComponents/GroupHistory/GroupHistory.module.css
@@ -1,20 +1,25 @@
 .container {
   margin-top: 0.8rem;
   overflow-y: auto;
+  overflow-x: hidden;
+
   height: 75%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
+  word-wrap: break-word;
+  white-space: normal;
   text-align: left;
-  padding-left: 2rem;
+  padding-left: 10%;
   width: 90%;
+  margin: 0 auto;
+  margin-top: 1rem;
 }
 
-.expenses {
-  transform: translateX(0.4rem);
+.failMessage {
+  margin: 0 auto;
 }
 
-.failMessage,
 .spinner {
   margin: 0 auto;
 }
