--- a/client/src/components/containerComponents/SuggestSettlePayments/SuggestSettlePayments.module.css
+++ b/client/src/components/containerComponents/SuggestSettlePayments/SuggestSettlePayments.module.css
@@ -20,3 +20,7 @@
 .separator {
   margin: 0 0.3rem;
 }
+
+.balances {
+  margin: 0 auto;
+}
