--- a/client/src/components/reuseableComponents/Spinner/Spinner.module.css
+++ b/client/src/components/reuseableComponents/Spinner/Spinner.module.css
@@ -3,3 +3,6 @@
   display: flex;
   margin: 0 auto;
 }
+
+.spinner-svg {
+}
